--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,43 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+:root {
+    font-family: 'Poppins', sans-serif;
+}
+
+body {
+    background: white;
+}
+
+
+li {
+    list-style: none;
+    cursor: pointer;
+    position: relative;
+}
+
+
+li:hover::before{
+  position: absolute;
+  content: '';
+  height: 4px;
+  width: 100%;
+  background: #2b9e70;
+  right: 0;
+  bottom: -10px;
+  color: #2b9e70;  
+}
+
+
+.icon {
+    cursor: pointer;
+}
+
+/*
+.card {
+    background: #000;
+}
+*/
